--- a/index.ipynb
+++ b/index.ipynb
@@ -97,11 +97,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = \"3\""
+    "number_of_weeks = \"5\""
    ]
   },
   {
@@ -121,7 +121,7 @@
     }
    ],
    "source": [
-    "number_of_weeks # 3"
+    "number_of_weeks # 5\n"
    ]
   },
   {
